Fix Timeline cards scrollbar in popover unusable (#4431)

--- a/ui/main/src/scss/styles.scss
+++ b/ui/main/src/scss/styles.scss
@@ -391,8 +391,7 @@ body {
     .popover-body {
         padding: 0px;
         max-height: 500px;
-        overflow: auto;
-        overflow-x: hidden;
+        overflow: hidden;
         margin-top: 0;
         margin-bottom: 0;
     }
